# pibootcfg

./: Cargo.toml  README.md  create_license.py  deny.toml
.cargo/: config.toml
.github/workflows/: build.yaml
examples/: config.txt
src/: lib.rs  parser.rs  piconfig2uboot.rs
