[package]
edition = "2021"
name = "pibootcfg"
version = "0.1.0"
authors = ["Toshifumi NISHINAGA <tnishinaga.dev@gmail.com>"]
license = "MIT"

[lib]
name = "pibootcfg"
path = "src/lib.rs"

[[bin]]
name = "piconfig2uboot"
path = "src/piconfig2uboot.rs"

[dependencies]
log = "0.4.14"
nom = "7.1.0"
anyhow = "1.0.35"
